--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,36 @@
+body{
+    background-color: #ED0F0E;
+}
 .grid-container{
     display: grid;
-    width: 500px;
-    height: 500px;
+    width: 400px;
+    height: 400px;
     border: 1px solid black;
+    background-color: #EEEDEB;
     
 }
-.grid-container * {
-    height: 100%;
-}
-
-/* .row{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
-.column{
-    flex-basis: 20px;
-} */
 
 .black-bkgd {
-    background-color: black;
+    background-color: #292927;
 }
 
-@media screen and (min-width: 800px) {
-    .column {
-      flex: 1;
-    }
-  }
+h1{
+    display: flex;
+    justify-content: center;
+    font-family: cursive;
+    color: #E2BC37;
+}
+.btn-container{
+    display: flex;
+    justify-content: center;
+    width: auto;
+}
+button{
+    margin: 1rem;
+    background-color: #FBFAFF;
+}
+
+.grid-wrapper{
+    display: flex;
+    justify-content: center;
+}
